<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_lpnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_cxname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/iv_add_1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="0.9"
                android:background="@drawable/iv_add" />

            <ImageView
                android:id="@+id/iv_add_2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="0.9"
                android:background="@drawable/iv_add" />

            <ImageView
                android:id="@+id/iv_add_3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="0.9"
                android:background="@drawable/iv_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_add_1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/choose_no_1" />

            <TextView
                android:id="@+id/tv_add_2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/choose_no_2" />

            <TextView
                android:id="@+id/tv_add_3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/choose_no_3" />
        </LinearLayout>

        <Button
            android:id="@+id/bv_upload"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorGray"
            android:gravity="center"
            android:text="@string/check_upload" />
        <WebView
            android:id="@+id/wv_task"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/bv_logout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_click"
        android:text="@string/logout"
        android:textSize="24sp" />
</LinearLayout>